# multi_camera_rig_v3

./: .gitignore  .gitmodules  README.md
camera_ros2_wrappers/firefly-ros2-wrapper/firefly-ros2-wrapper-bringup/: CMakeLists.txt  package.xml
camera_ros2_wrappers/firefly-ros2-wrapper/firefly-ros2-wrapper-bringup/calibs/: firefly_left.yaml  firefly_right.yaml
camera_ros2_wrappers/firefly-ros2-wrapper/firefly-ros2-wrapper-bringup/configs/: firefly.yaml
camera_ros2_wrappers/firefly-ros2-wrapper/firefly-ros2-wrapper-bringup/launch/: bringup.launch.py  bringup_fake.launch.py
camera_ros2_wrappers/firefly-ros2-wrapper/firefly-ros2-wrapper-bringup/params/: firefly.yaml
camera_ros2_wrappers/firefly-ros2-wrapper/firefly-ros2-wrapper-bringup/src/: stereo_disparity_node.cpp
camera_ros2_wrappers/firefly-ros2-wrapper/firefly-ros2-wrapper-description/: CMakeLists.txt  package.xml
camera_ros2_wrappers/ximea-ros2-wrapper/: README.md
camera_ros2_wrappers/ximea-ros2-wrapper/ximea-ros2-wrapper-bringup/: CMakeLists.txt  package.xml
camera_ros2_wrappers/ximea-ros2-wrapper/ximea-ros2-wrapper-description/: CMakeLists.txt  package.xml
multi_camera_rig_description/: CMakeLists.txt  package.xml
multi_camera_rig_description/launch/: description.launch.py
multi_camera_rig_description/meshes/: Multi_Camera_Rig.dae  Multi_Camera_Rig_Collision.stl
multi_camera_rig_description/rviz/: view.rviz
multi_camera_rig_description/srdf/: multi_cam_rig.srdf.xacro
multi_camera_rig_description/urdf/: multi_cam_rig_description.urdf.xacro  multi_cam_rig_macro.urdf.xacro
(+11 files in other folders)
