<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>firefly-ros2-wrapper-bringup</name>
  <version>0.0.1</version>
  <description>Brings up firefly flash stereo camera feed and functionalities.</description>
  <maintainer email="hayden4feddock@gmail.com">Hayden Feddock</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>spinnaker_camera_driver</depend>
  <depend>spinnaker_synchronized_camera_driver</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>